tests/fixtures/bad/ParamsCountBad2.php
<?php

namespace ParamsCountBad2;

class A
{
	function test($a1)
	{
	}
}


class B extends A
{
	function test($a1, $a2)
	{
	}
}
